--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
   <section>
 
     <div class="main-container">
-      <img src="img/JPHOTOGRAPHY-01.jpg" alt="341781346_6118927274869823_3470939918446346255_n.jpg" />
+      <img data-aos="zoom-out" data-aos-duration="3000" src="img/JPHOTOGRAPHY-01.jpg"
+        alt="341781346_6118927274869823_3470939918446346255_n.jpg" />
     </div>
 
   </section>
@@ -90,26 +91,26 @@
       </div>
       <div class="content">
         <div class="flex-gallery">
-          <img data-aos="flip-up" data-aos-duration="1000"
-            src="img/338720084_747226827027257_3462352786576506110_n.jpg" alt="">
-          <img data-aos="zoom-in" data-aos-duration="1000"
-            src="img/342402554_557821972900197_1613315870184907128_n.jpg" alt="">
-          <img data-aos="zoom-in" data-aos-duration="1000"
-            src="img/346823985_562951199287631_4662169195733485154_n.jpg" alt="">
-          <img data-aos="zoom-in" data-aos-duration="1000"
-            src="img/347788292_205592508973319_5518985621299623101_n.jpg" alt="">
-          <img data-aos="flip-up" data-aos-duration="1000"
-            src="img/326972364_576186091044370_6772610005387964077_n.jpg" alt="">
-          <img data-aos="zoom-in-down" data-aos-duration="1000"
-            src="img/322950808_555052973192058_2739668495776500847_n.jpg" alt="">
-          <img data-aos="flip-up" data-aos-duration="1000"
-            src="img/323555575_923517182361082_7040999777006188889_n.jpg" alt="">
-          <img data-aos="zoom-in-down" data-aos-duration="1000"
-            src="img/322701353_842940086942413_4232381066010007704_n.jpg" alt="">
-          <img data-aos="flip-up" data-aos-duration="1000"
-            src="img/313313811_145661138198478_3851354356189413054_n.jpg" alt="">
-          <img data-aos="zoom-in-down" data-aos-duration="1000"
-            src="img/317441777_153621730735752_2536696371762641849_n.jpg" alt="">
+          <img data-aos="flip-up" data-aos-duration="1000" src="img/338720084_747226827027257_3462352786576506110_n.jpg"
+            alt="">
+          <img data-aos="zoom-in" data-aos-duration="1000" src="img/342402554_557821972900197_1613315870184907128_n.jpg"
+            alt="">
+          <img data-aos="zoom-in" data-aos-duration="1000" src="img/346823985_562951199287631_4662169195733485154_n.jpg"
+            alt="">
+          <img data-aos="zoom-in" data-aos-duration="1000" src="img/347788292_205592508973319_5518985621299623101_n.jpg"
+            alt="">
+          <img data-aos="flip-up" data-aos-duration="1000" src="img/326972364_576186091044370_6772610005387964077_n.jpg"
+            alt="">
+          <img data-aos="flip-up" data-aos-duration="1000" src="img/322950808_555052973192058_2739668495776500847_n.jpg"
+            alt="">
+          <img data-aos="zoom-in" data-aos-duration="1000" src="img/323555575_923517182361082_7040999777006188889_n.jpg"
+            alt="">
+          <img data-aos="zoom-in" data-aos-duration="1000" src="img/322701353_842940086942413_4232381066010007704_n.jpg"
+            alt="">
+          <img data-aos="zoom-in" data-aos-duration="1000" src="img/313313811_145661138198478_3851354356189413054_n.jpg"
+            alt="">
+          <img data-aos="flip-up" data-aos-duration="1000" src="img/317441777_153621730735752_2536696371762641849_n.jpg"
+            alt="">
         </div>
       </div>
     </div>
@@ -123,8 +124,11 @@
       </div>
       <div class="content">
         <p>
-          We offer services like <i>Couple Portraits, Standard Portraits, Miscellaneous Portraits, Product Photography,
-            Photo Editing, Retouching, Food Photography and Video Editing</i>
+          We offer services like <i><span class="cportrait"> Couple Portraits</span>, <span class="sportrait"> Standard
+              Portraits</span>, <span class="mportraits"> Miscellaneous Portraits</span>, <span class="pphotography">
+              Product Photography</span>,
+            <span class="pediting"> Photo Editing</span>,<span class="retouching"> Retouching</span>, <span
+              class="fphotography"> Food Photography</span> and <span class="vediting"> Video Editing</span></i>
         </p>
         <img data-aos="flip-left" data-aos-duration="1000" src="img/logo-photography-25091.png" alt="logo-photography">
       </div>
@@ -240,6 +244,17 @@
     <p class="copy">JP Photography & Website. All rights reserved © 2023</p>
 
   </footer>
+
+
+  <!-- <div class="c--anim-btn">
+    <span class="c-anim-btn">
+      Hover Here
+    </span>
+    <span>
+      <a href="http://sanwebcorner.com"><img src="img/317441777_153621730735752_2536696371762641849_n.jpg" style="  width: 100%;   height: 100%;
+    "></a>
+    </span>
+  </div> -->
 
   <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fa-solid fa-arrow-up fa-lg"></i></button>
 
